<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.hjq.bar.TitleBar
            android:id="@+id/titleBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/change_password"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleBar2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_28"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <EditText
                android:id="@+id/edtCurrentPassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_48"
                android:background="@drawable/bg_form_input_6"
                android:hint="@string/current_password"
                android:imeOptions="actionDone"
                android:maxLength="20"
                android:singleLine="true" />


            <TextView
                android:id="@+id/tvErrorCurrentPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/error_password"
                android:textColor="@color/red_600"
                android:textSize="@dimen/sp_12"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edtNewPassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/bg_form_input_6"
                android:hint="@string/input_new_password"
                android:imeOptions="actionDone"
                android:maxLength="20"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvErrorNewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/error_password"
                android:textColor="@color/red_600"
                android:textSize="@dimen/sp_12"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edtConfirmNewPassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/bg_form_input_6"
                android:hint="@string/input_re_password"
                android:imeOptions="actionDone"
                android:maxLength="20"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvErrorConfirmNewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/error_password"
                android:textColor="@color/red_600"
                android:textSize="@dimen/sp_12"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnComplete"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_32"
                android:enabled="false"
                android:text="@string/update_password" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>