<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_radius_top"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_radius_top"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:padding="@dimen/dp_16"
            android:text="@string/choose_leader_before_leave"
            android:textColor="@color/gray_900"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/svSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_32"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="@drawable/bg_form_search"
            android:gravity="center_vertical"
            android:imeOptions="actionSearch"
            android:theme="@style/SearchHome"
            app:closeIcon="@drawable/ic_close_gray"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search"
            app:searchIcon="@drawable/ic_search_gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvListMember"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btnAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginVertical="@dimen/dp_8"
            android:background="@drawable/bg_border_16dp_red_line"
            android:gravity="center"
            android:paddingHorizontal="@dimen/dp_16"
            android:paddingVertical="@dimen/dp_8"
            android:text="@string/choose_and_out_group"
            android:textColor="@color/red_500"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            android:gravity="center"
            android:paddingHorizontal="@dimen/dp_16"
            android:paddingVertical="@dimen/dp_8"
            android:text="@string/cancel"
            android:textColor="@color/gray_900"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

    </LinearLayout>

</layout>